--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <main id="home">
         <section id="welcome-section">
+            <img src="https://i.etsystatic.com/12400613/r/il/02a3f6/4926147713/il_fullxfull.4926147713_q7ly.jpg" alt="The Biz" width="200">
             <h1>Alexander Bharucha</h1>
             <p>University of Oklahoma | Management Information Systems (MIS) | Undergraduate May 2025</p>
             <a href="about.html" class="btn">Explore</a>
