--- a/skills.html
+++ b/skills.html
@@ -25,7 +25,7 @@
                 <li><strong>Programming Languages:</strong> C#, Python, SQL, JavaScript, VBA</li>
                 <li><strong>Frameworks:</strong> WPF, ASP.NET</li>
                 <li>
-                    <strong>Tools:</strong> Microsoft Visual Studio, Git, Microsoft SQL Server, Unity
+                    <strong>Tools:</strong> Microsoft Visual Studio, Git, Microsoft SQL Server, Unity, PowerBI, LucidChart
                 </li>
             </ul>
         </section>
