--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
 
     <main id="projects">
         <section id="projects-section">
-            <h1>Projects</h1>
+            <p1>Projects</p1>
             <ul>
                 <li>
                     <strong>Resume Webpage</strong>
