--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
 
     <main id="projects">
         <section id="projects-section">
-            <p1>Projects</p1>
+            <p id="p1">Projects</p>
             <ul>
                 <li>
                     <strong>Resume Webpage</strong>
