--- a/skills.html
+++ b/skills.html
@@ -20,7 +20,7 @@
 
     <main id="skills">
         <section id="skills-section">
-            <s1>Skill Sets</s1>
+            <p id="s1">Skill Sets</s1>
             <ul>
                 <li><strong>Programming Languages:</strong> C#, Python, SQL, JavaScript, VBA</li>
                 <li><strong>Frameworks:</strong> WPF, ASP.NET</li>
